welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: '=' expected but ';' found.
  ecritMessage(c);
^