welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var c:Int = 0;
  var x:Int = 0;
  var y:Int = 0;
  var g:Boolean = false;
  var bloc
  ecritMessage(c);
  c += 1;
  while ( !testFinal() ){
    if ( getX() == 0 ){
      g = false;
      y += 1;
      setPos(x,y);
      ecritMessage(c);
      c+=1;
    } else if ( getX() == getMondeLargeur()-1 ){
      y += 1;
      g = true;
      setPos(x,y);
      ecritMessage(c);
      c+=1;
    }
    if ( g ){
      x += 1;
    } else { 
      x -= 1;    
    }
    setPos(x,y);
    ecritMessage(c);
    c+=1;
  }
}

def testFinal() : Boolean = {
  if ( getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1 ){
    return true;
  } else {
    return false;
  }
}

